--- a/src/components/nav/navbar.css
+++ b/src/components/nav/navbar.css
@@ -10,8 +10,13 @@
   padding-left: 20px;
 }
 
-.navbar h1 {
+.navbar a h1 {
   color: #f1356d;
+  text-decoration: none;
+}
+
+h1 {
+  text-decoration: none;
 }
 
 .links {
@@ -21,11 +26,11 @@
 
 .links a {
   color: #14171a;
-  text-decoration: none;
   margin-left: 20px;
   font-size: 18px;
   font-weight: bold;
   padding: 15px;
+  text-decoration: none;
 }
 
 .links a:hover {
